rnsc/tests/snapshots/rns_warn-inner_directive-numeric_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
## MyClass$12345 ##
.class MyClass$12345
.super java/lang/Object

.class_end

## MyClass ##
.class public MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a numeric value used as inner class name is handled.
; Expected: the number is treated as an identifier

.class public MyClass
.super java/lang/Object

.inner 12345
    .super java/lang/Object
.inner_end

.class_end
----- STDERR -----

----- JAVAP -----
## MyClass$12345 ##
Classfile <TEMP_DIR>/MyClass$12345.class
  Last modified <DATE>; size 117 bytes
  SHA-256 checksum 21c1ffe40e736a6cdc3a460411e923390b807832a41c46e36c417da737059ac5
class MyClass$12345
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // MyClass$12345
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass$12345
  #4 = Utf8               MyClass$12345
  #5 = Class              #6              // MyClass
  #6 = Utf8               MyClass
  #7 = Utf8               12345
  #8 = Utf8               InnerClasses
{
}
InnerClasses:
  #7= #3 of #5;                           // 12345=class MyClass$12345 of class MyClass

## MyClass ##
Classfile <TEMP_DIR>/MyClass.class
  Last modified <DATE>; size 117 bytes
  SHA-256 checksum 727aac8a0ac2fd2fc23fc6277fbb1d28222d1906f729cf84f26745a6dd32ab67
public class MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass
  #4 = Utf8               MyClass
  #5 = Utf8               InnerClasses
  #6 = Utf8               12345
  #7 = Class              #8              // MyClass$12345
  #8 = Utf8               MyClass$12345
{
}
InnerClasses:
  #6= #7 of #3;                           // 12345=class MyClass$12345 of class MyClass
