rnsc/tests/snapshots/rns_warn-inner_directive-string_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
## MyClass$MyInner ##
.class MyClass$MyInner
.super java/lang/Object

.class_end

## MyClass ##
.class public MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a string literal used as inner class name is handled.
; Expected: the quoted string is treated as an identifier

.class public MyClass
.super java/lang/Object

.inner "MyInner"
    .super java/lang/Object
.inner_end

.class_end
----- STDERR -----

----- JAVAP -----
## MyClass$MyInner ##
Classfile <TEMP_DIR>/MyClass$MyInner.class
  Last modified <DATE>; size 121 bytes
  SHA-256 checksum d1c17ab74dc14d3024c1aeb65de6850193c785bb4673dd6a2c81e6831008683f
class MyClass$MyInner
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // MyClass$MyInner
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass$MyInner
  #4 = Utf8               MyClass$MyInner
  #5 = Class              #6              // MyClass
  #6 = Utf8               MyClass
  #7 = Utf8               MyInner
  #8 = Utf8               InnerClasses
{
}
InnerClasses:
  #7= #3 of #5;                           // MyInner=class MyClass$MyInner of class MyClass

## MyClass ##
Classfile <TEMP_DIR>/MyClass.class
  Last modified <DATE>; size 121 bytes
  SHA-256 checksum 7a66e3ed74264d8f6b764a60e85a088a409acfd2efe8258d9470d3fd6b8c8b1a
public class MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass
  #4 = Utf8               MyClass
  #5 = Utf8               InnerClasses
  #6 = Utf8               MyInner
  #7 = Class              #8              // MyClass$MyInner
  #8 = Utf8               MyClass$MyInner
{
}
InnerClasses:
  #6= #7 of #3;                           // MyInner=class MyClass$MyInner of class MyClass
