rnsc/tests/snapshots/rns_warn-mangled_name_directive-access_flag_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
## MyClass ##
.class public MyClass
.super java/lang/Object

.class_end

## public ##
.class public
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that an access flag used as mangled name produces a warning.
; Expected: reserved-like identifier warning

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object
    .mangled_name public
.inner_end

.class_end
----- STDERR -----
[TODO] Warning: TODO: reserved-like identifier used as name
----- JAVAP -----
## MyClass ##
Classfile <TEMP_DIR>/MyClass.class
  Last modified <DATE>; size 110 bytes
  SHA-256 checksum 8df7781a14e0d27d7b7b130d79e7a94790f1f334f792b1eea66c8677c6190b60
public class MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass
  #4 = Utf8               MyClass
  #5 = Utf8               InnerClasses
  #6 = Utf8               Inner
  #7 = Class              #8              // public
  #8 = Utf8               public
{
}
InnerClasses:
  #6= #7 of #3;                           // Inner=class public of class MyClass

## public ##
Classfile <TEMP_DIR>/public.class
  Last modified <DATE>; size 110 bytes
  SHA-256 checksum 2580f6c615c4291dd92b8d81469e9790a851979a0f488553a7c89c1490d4c666
class public
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // public
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // public
  #4 = Utf8               public
  #5 = Class              #6              // MyClass
  #6 = Utf8               MyClass
  #7 = Utf8               Inner
  #8 = Utf8               InnerClasses
{
}
InnerClasses:
  #7= #3 of #5;                           // Inner=class public of class MyClass
