rnsc/tests/snapshots/rns_warn-mangled_name_directive-label_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
## MyClass ##
.class public MyClass
.super java/lang/Object

.class_end

## label ##
.class label
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a label used as mangled name produces a warning.
; Expected: reserved-like identifier warning

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object
    .mangled_name label:
.inner_end

.class_end
----- STDERR -----
[TODO] Warning: TODO: reserved-like identifier used as name
----- JAVAP -----
## MyClass ##
Classfile <TEMP_DIR>/MyClass.class
  Last modified <DATE>; size 109 bytes
  SHA-256 checksum a729a263b7728ec9d2e893d744497b4196fd49e552c9e9c46b8be97f9e1f605a
public class MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass
  #4 = Utf8               MyClass
  #5 = Utf8               InnerClasses
  #6 = Utf8               Inner
  #7 = Class              #8              // label
  #8 = Utf8               label
{
}
InnerClasses:
  #6= #7 of #3;                           // Inner=class label of class MyClass

## label ##
Classfile <TEMP_DIR>/label.class
  Last modified <DATE>; size 109 bytes
  SHA-256 checksum 02024baad94fc972a15fc11714964670c9b77c5129c9cfb375b90d2d97699679
class label
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // label
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // label
  #4 = Utf8               label
  #5 = Class              #6              // MyClass
  #6 = Utf8               MyClass
  #7 = Utf8               Inner
  #8 = Utf8               InnerClasses
{
}
InnerClasses:
  #7= #3 of #5;                           // Inner=class label of class MyClass
