rnsc/tests/snapshots/rns_warn-package_directive-access_flag_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public public/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that an access flag can be used as package name.
; This should produce an error because public is an access flag, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.super java/lang/Object
.package public

.class_end
----- STDERR -----
[TODO] Warning: TODO: reserved-like identifier used as name
----- JAVAP -----
Classfile <TEMP_DIR>/public/MyClass.class
  Last modified <DATE>; size 66 bytes
  SHA-256 checksum cd2cbb3c6e299ec213dea0eadcd526162a8f59c6d7606fb67cc426a035639304
public class public.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // public/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // public/MyClass
  #4 = Utf8               public/MyClass
{
}
