rnsc/tests/snapshots/rns_warn-package_directive-directive_as_name_class.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public .class/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a directive token can be used as package name.
; This should produce an error because .class is a directive, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.super java/lang/Object
.package .class

.class_end
----- STDERR -----
[TODO] Warning: TODO: reserved-like identifier used as name
[W-002] Warning: package name '.class' contains '.' separator
   ╭─[ test_data/rns_integration/rns_warn/package_directive/directive_as_name_class.rns:7:10 ]
   │
 7 │ .package .class
   │          ───┬──  
   │             ╰──── package '.class' uses '.' as separator
   │ 
   │ Help: If you intended Java-style package syntax, use '/' instead: '/class'
   │ 
   │ Note: In bytecode, package separators are represented as '/'. The '.' character is used in Java source syntax but will be kept as-is in the bytecode.
───╯
----- JAVAP -----
Classfile <TEMP_DIR>/.class/MyClass.class
  Last modified <DATE>; size 66 bytes
  SHA-256 checksum 6ce8a233089a204ef8cc04ffbc643adafdd903fae37aee6cec763fdad674d7f8
public class .class.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // .class/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // ".class/MyClass"
  #4 = Utf8               .class/MyClass
{
}
