rnsc/tests/snapshots/rns_warn-package_directive-directive_as_name_super.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public .super/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that .super directive can be used as package name.
; This should produce an error because .super is a directive, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.super java/lang/Object
.package .super

.class_end
----- STDERR -----
[TODO] Warning: TODO: reserved-like identifier used as name
[W-002] Warning: package name '.super' contains '.' separator
   ╭─[ test_data/rns_integration/rns_warn/package_directive/directive_as_name_super.rns:7:10 ]
   │
 7 │ .package .super
   │          ───┬──  
   │             ╰──── package '.super' uses '.' as separator
   │ 
   │ Help: If you intended Java-style package syntax, use '/' instead: '/super'
   │ 
   │ Note: In bytecode, package separators are represented as '/'. The '.' character is used in Java source syntax but will be kept as-is in the bytecode.
───╯
----- JAVAP -----
Classfile <TEMP_DIR>/.super/MyClass.class
  Last modified <DATE>; size 66 bytes
  SHA-256 checksum 01623f1da9128550426e68e7d7e6c009d163f7952e7c7eac25f887055fa5a21e
public class .super.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // .super/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // ".super/MyClass"
  #4 = Utf8               .super/MyClass
{
}
