rnsc/tests/snapshots/rns_warn-package_directive-label_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public label/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a label can be used as package name.
; This should produce an error because label: is a label, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.super java/lang/Object
.package label:

.class_end
----- STDERR -----
[TODO] Warning: TODO: reserved-like identifier used as name
----- JAVAP -----
Classfile <TEMP_DIR>/label/MyClass.class
  Last modified <DATE>; size 65 bytes
  SHA-256 checksum 2552ea38ca7f1bef7c7a7c26b2388a364bcc995ad932e7876b68863e2e191d7e
public class label.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // label/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // label/MyClass
  #4 = Utf8               label/MyClass
{
}
